--- a/week 1-Jetpack Compose basics/LayoutsCodelab/app/build.gradle
+++ b/week 1-Jetpack Compose basics/LayoutsCodelab/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.0'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta01"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
