--- a/week 2-1-Layouts in JetpackCompose/LayoutsCodelab2/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/LayoutsCodelab2/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
