--- a/week 2-1-Layouts in JetpackCompose/LayoutsCodelab2/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/LayoutsCodelab2/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    
+    implementation 'io.coil-kt:coil-compose:1.3.0'
 }
