Navigation Codelab - Testing Navigation in Compose

--- a/week 3-3-Jetpack Compose Navigation/app/build.gradle
+++ b/week 3-3-Jetpack Compose Navigation/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:$rootProject.activityComposeVersion"
 
     // Testing dependencies
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$rootProject.espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
